--- a/views/recipes.ejs
+++ b/views/recipes.ejs
@@ -1,45 +1,19 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="assets/style.css" />
-    <title>List of Recipes</title>
-  </head>
 
-  <body>
-    <h1>List of Recipes</h1>
-    <p>Search<input type="text" name="searching" /></p>
-    <ul>
-      <% recipesList.forEach(recipe=> { %>
-
-      <table>
-        <tr>
-          <td>
-            <form action="/delete" method="post">
-              <input type="hidden" name="id" value="<%= recipe._id %>" />
-              <button class="delete">X</button>
-            </form>
-          </td>
-          <td><a href="/<%= recipe._id %>"><%= recipe.name %></a></td>
-        </tr>
-      </table>
-      <% }); %>
       <div id="addRecipe">
         <h3>Add a new recipe:</h3>
         <form id="formular" action="/add" method="post">
           <table>
             <tr>
-              <td>Name :</td>
+              <td>Name : </td>
               <td><input type="text" name="name" required /></td>
             </tr>
             <tr>
-              <td>Description :</td>
-              <td><input type="text" name="description" required /></td>
+              <td>Description : </td>
+              <td><textarea name="description" required></textarea></td>
             </tr>
             <tr>
-              <td>Ingredients :</td>
-              <td><input type="text" name="ingredient" required /></td>
-              <td><span class="ingredients"></span></td>
+              <td>Ingredients : </td>
+              <td><span class="ingredients"><input type="text" name="ingredients" required /></span></td>
             </tr>
             <tr>
               <td>
@@ -56,7 +30,22 @@
           </table>
         </form>
       </div>
-    </ul>
+
+      <h3>List of recipes</h3>
+      <% recipesList.forEach(recipe=> { %>
+
+        <table>
+          <tr>
+            <td>
+              <form action="/delete" method="post">
+                <input type="hidden" name="id" value="<%= recipe._id %>" />
+                <button class="delete">X</button>
+              </form>
+            </td>
+            <td><a href="/<%= recipe._id %>"><%= recipe.name %></a></td>
+          </tr>
+        </table>
+        <% }); %>
     <script>
       var i = 0;
       // Adds an ingredient input field to the recipe form.
@@ -70,11 +59,10 @@
 
         const newInput = document.createElement("input");
         newInput.type = "text";
-        newInput.name = "ingredient" + i++;
+        newInput.name = "ingredients[" + i++ +"]";
         newInput.required = true;
 
         spanIngredient.appendChild(newInput);
       }
     </script>
-  </body>
-</html>
+
